testsuite/tests/ghc-regress/indexed-types/should_fail/Simple12.hs
{-# OPTIONS -ftype-families -fglasgow-exts #-}

module ShouldFail where

type family C a :: *
type instance C Int = forall a. [a]

